2006-07-02 Paul Jakma <paul.jakma@sun.com>

	* ospf_nsm.c: (nsm_should_adj) New function, just consolidate the
	  10.4 adjacency check from nsm_twoway_received/nsm_adj_ok.
	  (nsm_twoway_received/nsm_adj_ok) Use former.
	  (ospf_nsm_event) Don't allow action functions to change
	  next_state if the NSM tables do not indicate next_state is
	  conditional, log warning if one tries - existing code
	  appears fine though.
	  (nsm_timer_set) ls_req timer should be OFF in early states.
	  Compact several identical sections.
	  Set inactivity timer to OFF for Down, for documentary
	  purposes.
	* ospf_lsa.c: (ospf_translated_nssa_refresh) CID #13.

2006-06-30 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ospf_vty.c: (show_ip_ospf_neighbor_id) Should show all instances
	  of that neighbor (since it may appear on multiple interfaces)
	  instead of bailing out after showing the first match.

2006-06-29 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ospf_nsm.c: (nsm_twoway_received) When deciding whether to
	  change from state Init to ExStart, the test for whether the
	  neighboring router is DR or BDR should be against the
	  local router's notion of DR/BDR, not the neighbor's view.

2006-06-28 Erik Muller <erikm@internap.com>

	* ospfd.h: Define 2 new struct ospf config flags:
	  OSPF_LOG_ADJACENCY_CHANGES and OSPF_LOG_ADJACENCY_DETAIL
	* ospf_nsm.c (nsm_change_state): Log adjacency changes if
	  requested.
	* ospf_vty.c (ospf_log_adjacency_changes): New command function
	  to implement ospf subcommand "log-adjacency-changes [detail]".
	  (no_ospf_log_adjacency_changes) Turn off log-adjacency-changes.
	  (show_ip_ospf) Show whether adjacency changes are logged.
	  (ospf_config_write) Add "log-adjacency-changes [detail]" to config.
	  (ospf_vty_init) Add ospf_log_adjacency_changes and
	  no_ospf_log_adjacency_changes.

2006-06-26 Paul Jakma <paul.jakma@sun.com>

	* ospf_abr.c: (general) NSSA translate-candidate ABRs need to